fixed spacings and paddings

--- a/assets/styles/decisionCreation.scss
+++ b/assets/styles/decisionCreation.scss
@@ -2,6 +2,7 @@
 
 .date-label{
     padding-left : 40px;
+    margin : 0;
 }
 
 .first-form-spacing{
